--- a/app/partials/atom.html
+++ b/app/partials/atom.html
@@ -1,7 +1,7 @@
 <fa-view>
-  <fa-modifier fa-rotate-x="rotateX.get()", fa-rotate-y="rotateY.get()">
-    <fa-modifier fa-size="[300, 300]">
-      <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]" fa-rotate-z="rotateZ.get()">
+  <fa-modifier fa-rotate-x="rotateX()", fa-rotate-y="rotateY()">
+  <fa-modifier fa-size="[300, 300]">
+      <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]" fa-rotate-z="rotateZ()">
         <fa-surface>
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
