--- a/app/partials/atom.html
+++ b/app/partials/atom.html
@@ -1,12 +1,12 @@
 <fa-view>
   <fa-modifier fa-rotate-x="rotateX()", fa-rotate-y="rotateY()">
-  <fa-modifier fa-size="[300, 300]">
+  <fa-modifier fa-size="[1200, 1200]" fa-scale="[0.25, 0.25, 0.25]">
       <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]" fa-rotate-z="rotateZ()">
         <fa-surface>
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+             width="1200px" height="1200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
           <g>
-            <path fill="#5F87C5" d="M259.916,67.104c2.761-3.337,4.422-7.619,4.422-12.286c0-10.656-8.639-19.291-19.292-19.291
+            <path fill="#FFFFFF" d="M259.916,67.104c2.761-3.337,4.422-7.619,4.422-12.286c0-10.656-8.639-19.291-19.292-19.291
               c-4.668,0-8.948,1.659-12.286,4.419c-23.088-17.433-51.801-27.792-82.896-27.792c-76.009,0-137.847,61.836-137.847,137.845
               c0,76.01,61.838,137.847,137.847,137.847c76.007,0,137.846-61.837,137.846-137.847C287.709,118.906,277.349,90.193,259.916,67.104z
                M149.863,282.312c-72.957,0-132.312-59.355-132.312-132.312S76.906,17.688,149.863,17.688c29.666,0,57.08,9.815,79.173,26.367
@@ -18,12 +18,12 @@
       </fa-modifier>
     </fa-modifier>
   </fa-modifier>
-  <fa-modifier fa-size="[300, 300]">
+  <fa-modifier fa-size="[1200, 1200]" fa-scale="[0.25, 0.25, 0.25]">
     <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]">
       <fa-surface>
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-          <circle fill="#5F87C5" cx="149.864" cy="149.999" r="56.094"/>
+               width="1200px" height="1200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+          <circle fill="#FFFFFF" cx="149.864" cy="149.999" r="56.094"/>
         </svg>
       </fa-surface>
     </fa-modifier>
