--- a/app/partials/atom.html
+++ b/app/partials/atom.html
@@ -1,31 +1,10 @@
-<fa-view>
-  <fa-modifier fa-rotate-x="rotateX()", fa-rotate-y="rotateY()">
-  <fa-modifier fa-size="[1200, 1200]" fa-scale="[0.25, 0.25, 0.25]">
-      <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]" fa-rotate-z="rotateZ()">
-        <fa-surface>
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             width="1200px" height="1200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-          <g>
-            <path fill="#FFFFFF" d="M259.916,67.104c2.761-3.337,4.422-7.619,4.422-12.286c0-10.656-8.639-19.291-19.292-19.291
-              c-4.668,0-8.948,1.659-12.286,4.419c-23.088-17.433-51.801-27.792-82.896-27.792c-76.009,0-137.847,61.836-137.847,137.845
-              c0,76.01,61.838,137.847,137.847,137.847c76.007,0,137.846-61.837,137.846-137.847C287.709,118.906,277.349,90.193,259.916,67.104z
-               M149.863,282.312c-72.957,0-132.312-59.355-132.312-132.312S76.906,17.688,149.863,17.688c29.666,0,57.08,9.815,79.173,26.367
-              c-2.071,3.074-3.279,6.774-3.279,10.764c0,10.651,8.637,19.286,19.289,19.286c3.988,0,7.688-1.21,10.763-3.278
-              c16.552,22.092,26.365,49.509,26.365,79.173C282.174,222.956,222.82,282.312,149.863,282.312z"/>
-          </g>
-          </svg>
-        </fa-surface>
-      </fa-modifier>
-    </fa-modifier>
+<fa-modifier id="ionic_atom" fa-opacity="atomOpacity()" fa-translate="atomTranslate()" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]">
+  <fa-modifier>
+    <atom-face rotate-z="atomRotateZ" rotate-x="atomRotateX" rotate-y="atomRotateY">
+    </atom-face>
   </fa-modifier>
-  <fa-modifier fa-size="[1200, 1200]" fa-scale="[0.25, 0.25, 0.25]">
-    <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.49954, 0.5]">
-      <fa-surface>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               width="1200px" height="1200px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-          <circle fill="#FFFFFF" cx="149.864" cy="149.999" r="56.094"/>
-        </svg>
-      </fa-surface>
-    </fa-modifier>
+  <fa-modifier fa-rotate-y="3.14159">
+    <atom-face rotate-z="atomRotateZ" rotate-x="atomRotateX" rotate-y="atomRotateY">
+    </atom-face>
   </fa-modifier>
-</fa-view>
+</fa-modifier>
