--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     background-color: #4D84E0;
+    color: white;
 }
 
 .center-box {
@@ -18,8 +19,36 @@ body {
 }
 
 .awesome {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-align: center;
   font-size: 7rem;
-  color: white;
+}
+
+.slide-header {
+  font-size: 3.5rem;
+}
+
+.slide1 {
+  text-align: center;
+}
+.slide5 {
+  text-align: center;
+}
+
+.slide2 {
+  text-align: left;
+}
+.slide3 {
+  text-align: left;
+}
+.slide4 {
+  text-align: left;
+}
+.slide6 {
+  text-align: right;
+}
+.slide7 {
+  text-align: right;
+}
+.slide8 {
+  text-align: right;
 }
