--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,23 +1,15 @@
-<fa-app fa-perspective="500" class="full-screen">
-  <fa-modifier fa-translate="globalTranslate()" id="global">
-    <fa-modifier id="ionic_atom" fa-opacity="atomOpacity()" fa-translate="atomTranslate()" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]">
-      <fa-modifier>
-        <atom rotate-z="atomRotateZ" rotate-x="atomRotateX" rotate-y="atomRotateY">
-        </atom>
-      </fa-modifier>
-      <fa-modifier fa-rotate-y="3.14159">
-        <atom rotate-z="atomRotateZ" rotate-x="atomRotateX" rotate-y="atomRotateY">
-        </atom>
-      </fa-modifier>
-    </fa-modifier>
-    <fa-modifier fa-size="[1300, 300]" id="top_title" fa-translate="topTitleTranslate()"fa-origin="[0.5, 0.5]" fa-align="[0.5, 0.5]">
-      <fa-surface class="awesome">
-        Rapid Mobile Apps With
-      </fa-surface>
-    </fa-modifier>
-    <fa-modifier id="ionic_logo" fa-translate="ionicLogoTranslate()" fa-align="[0.5, 0.5]">
-      <ionic-title>
-      </ionic-title>
-    </fa-modifier>
-  </fa-modifier>
-</fa-app>
+<app-container>
+  <atom></atom>
+  <top-title></top-title>
+  <ionic-title></ionic-title>
+  <slides timeline="timeline">
+    <slide-header>Overview</slide-header>
+    <slide-header>Why Ionic?</slide-header>
+    <slide-header>Cordova</slide-header>
+    <slide-header>Ionic Basics</slide-header>
+    <slide-header>Code Along</slide-header>
+    <slide-header>Where it fits</slide-header>
+    <slide-header>Concerns</slide-header>
+    <slide-header>Conclusion</slide-header>
+  </slide-content>
+</app-container>
