--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -2,13 +2,13 @@
   <atom></atom>
   <top-title></top-title>
   <ionic-title></ionic-title>
-  <slides timeline="timeline">
+  <slides>
     <slide-header>Overview</slide-header>
     <slide-header>Why Ionic?</slide-header>
     <slide-header>Cordova</slide-header>
     <slide-header>Ionic Basics</slide-header>
     <slide-header>Code Along</slide-header>
-    <slide-header>Where it fits</slide-header>
+    <slide-header>Where It Fits</slide-header>
     <slide-header>Concerns</slide-header>
     <slide-header>Conclusion</slide-header>
   </slide-content>
