--- a/app/partials/slide-header.html
+++ b/app/partials/slide-header.html
@@ -1,11 +1,14 @@
 <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-rotate-z="rotateZ()">
   <fa-modifier fa-translate="[0, -170, 0]">
     <fa-modifier fa-scale="[0.5, 0.5, 0.5]">
-      <fa-modifier fa-size="[500, 65]" fa-origin="origin()" fa-opacity="opacity()" fa-rotate-z="inverseRotateZ()">
-        <fa-surface>
-          <div class="slide-header slide{{slideNumber}}" ng-transclude>
-          </div>
-        </fa-surface>
+
+      <fa-modifier fa-size="[400, 65]" fa-origin="origin()" fa-rotate-z="inverseRotateZ()">
+        <fa-modifier fa-opacity="opacity()" fa-translate="translate()">
+          <fa-surface class="behind">
+            <div class="slide-header slide{{getSlideNumber()}}" ng-transclude>
+            </div>
+          </fa-surface>
+        </fa-modifier>
       </fa-modifier>
     </fa-modifier>
   </fa-modifier>
