--- a/app/partials/atom.html
+++ b/app/partials/atom.html
@@ -1,4 +1,4 @@
-<fa-modifier id="ionic_atom" fa-opacity="atomOpacity()" fa-translate="atomTranslate()" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]">
+<fa-modifier id="ionic_atom" fa-opacity="atomOpacity()" fa-translate="atomTranslate()">
   <fa-modifier>
     <atom-face rotate-z="atomRotateZ" rotate-x="atomRotateX" rotate-y="atomRotateY">
     </atom-face>
