--- a/app/partials/slide-header.html
+++ b/app/partials/slide-header.html
@@ -1,7 +1,6 @@
-<fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-rotate-z="rotateZ()">
+<fa-modifier fa-rotate-z="rotateZ()">
   <fa-modifier fa-translate="[0, -170, 0]">
     <fa-modifier fa-scale="[0.5, 0.5, 0.5]">
-
       <fa-modifier fa-size="[400, 65]" fa-origin="origin()" fa-rotate-z="inverseRotateZ()">
         <fa-modifier fa-opacity="opacity()" fa-translate="translate()">
           <fa-surface class="behind">
