--- a/app/partials/app-container.html
+++ b/app/partials/app-container.html
@@ -1,5 +1,5 @@
-<fa-app id="app_container" fa-perspective="1000" class="full-screen">
-  <fa-modifier fa-opacity="globalOpacity()" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-scale="globalScale()">
+<fa-app id="app_container" fa-perspective="666.666" class="full-screen">
+  <fa-modifier fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-scale="globalScale()">
     <fa-modifier fa-translate="globalTranslate()" id="global">
       <div ng-transclude>
       </div>
