--- a/app/partials/ionic-title.html
+++ b/app/partials/ionic-title.html
@@ -1,9 +1,9 @@
-<fa-modifier id="ionic_logo" fa-translate="ionicLogoTranslate()" fa-align="[0.5, 0.5]">
+<fa-modifier id="ionic_logo" fa-opacity="opacity()" fa-translate="ionicLogoTranslate()" fa-align="[0.5, 0.5]">
   <fa-view>
-    <fa-modifier fa-origin="[0.5, 0.5]"fa-size="[600, 200]">
+    <fa-modifier fa-origin="[0.5, 0.5]"fa-size="[400, 133.3333]">
       <fa-surface>
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           width="600px" height="200px" viewBox="0 0 300 100" enable-background="new 0 0 300 100" xml:space="preserve">
+           width="400px" height="133.3333px" viewBox="0 0 300 100" enable-background="new 0 0 300 100" xml:space="preserve">
         <g>
           <g>
             <path fill="#FFFFFF" d="M13.014,95.566V27.683H16.6v67.883H13.014z"/>
