--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -4,20 +4,13 @@
   <ionic-title></ionic-title>
   <slide-groups>
     <slide-group-header>Overview</slide-group-header>
-    <slide-group src="overview.html"></slide-group>
     <slide-group-header>Why Ionic?</slide-group-header>
-    <slide-group src="why-ionic.html"></slide-group>
     <slide-group-header>Cordova</slide-group-header>
-    <slide-group src="cordova.html"></slide-group>
     <slide-group-header>Ionic Basics</slide-group-header>
-    <slide-group src="ionic-basics.html"></slide-group>
     <slide-group-header>Code Along</slide-group-header>
-    <slide-group src="code-along.html"></slide-group>
     <slide-group-header>Where It Fits</slide-group-header>
-    <slide-group src="where-it-fits.html"></slide-group>>
     <slide-group-header>Concerns</slide-group-header>
-    <slide-group src="concerns.html"></slide-group>
     <slide-group-header>Conclusion</slide-group-header>
-    <slide-group src="conclusion.html"></slide-group>
   </slide-groups>
+  <slide-group timeline='timeline' src="'partials/why-ionic-famous.html'"></slide-group>
 </app-container>
