--- a/app/partials/why-ionic-timings.html
+++ b/app/partials/why-ionic-timings.html
@@ -1,4 +1,4 @@
-<fa-modifier fa-opacity="groupOpacity()">
+<fa-modifier fa-opacity="whyIonicOpacity()">
   <div ng-transclude>
   </div>
 </fa-modifier>
