--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -28,14 +28,14 @@ body {
 
 .awesome {
   text-align: center;
-  font-size: 14rem;
+  font-size: 8.3333rem;
 }
 
 #top_title {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 .slide-header {
-  font-size: 7rem;
+  font-size: 4.6666rem;
   text-align: center;
 }
 
@@ -46,4 +46,29 @@ body {
 .cover {
   background-color: #4D84E0;
   z-index: -100;
+}
+
+.cursive-header {
+  text-align: center;
+}
+.cursive-header blockquote {
+  padding: 25px;
+  color: white;
+  display: block;
+  position: relative;
+  width: 70%;
+  margin: 5px auto;
+  padding: 25px;
+  font-family: "Georgia", Cambria, "Times New Roman", Times, serif;
+  font-weight: normal;
+  font-style: italic;
+  font-size: 7.33333rem;
+  background: none;
+  border: none;
+  box-shadow: none;
+}
+
+.about-text {
+  font-size: 6.333rem;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
