--- a/app/partials/where-it-fits.html
+++ b/app/partials/where-it-fits.html
@@ -33,6 +33,7 @@
         progress: true,
         history: false,
         center: true,
+        width: 1100,
         maxScale: 2.0,
         keyboard: false,
 
