--- a/app/partials/why-ionic.html
+++ b/app/partials/why-ionic.html
@@ -78,6 +78,15 @@
         </section>
 
         <section>
+          <h2>
+            <img width="200" src="img/hannah_notsure.jpg" />
+            <blockquote>
+              &ldquo;Ok...&rdquo;
+            </blockquote>
+          </h2>
+        </section>
+
+        <section>
           <h3>So basically I want this...</h3>
           <p style="margin-top: 60px">
             <img src="img/apple.png" class="logo" width="210" height="210" style="margin-right: 15px">
@@ -126,7 +135,8 @@
         progress: true,
         history: false,
         center: true,
-        maxScale: 2.0,
+        width: 1100,
+        maxScale: 1.75,
         keyboard: false,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
