--- a/app/partials/cordova.html
+++ b/app/partials/cordova.html
@@ -59,6 +59,7 @@
         progress: true,
         history: false,
         center: true,
+        width: 1100,
         maxScale: 2.0,
         keyboard: false,
 
