--- a/app/partials/ionic-basics.html
+++ b/app/partials/ionic-basics.html
@@ -284,6 +284,7 @@ $ionicActionSheet.show({
         progress: true,
         history: false,
         center: true,
+        width: 1100,
         maxScale: 2.0,
         keyboard: false,
 
