--- a/app/partials/app-container.html
+++ b/app/partials/app-container.html
@@ -4,8 +4,8 @@
       <fa-modifier fa-opacity="initialInstructionsOpacity()" fa-size="[1200, 800]" fa-origin="[0.5, 0.5]">
         <fa-surface>
           <div class="initial-instructions">
-            <p>Use arrow keys to navigate.</p>
-            <p>Press right arrow to get started.</p>
+            <p>Use arrow keys or swipe to navigate.</p>
+            <p>Press right arrow or swipe to get started.</p>
           </div>
         </fa-surface>
       </fa-modifier>
