--- a/app/partials/concerns.html
+++ b/app/partials/concerns.html
@@ -16,7 +16,7 @@
         </section>
 
         <section>
-          <h2>No Ionic is specfically design for mobile apps</h2>
+          <h2>No Ionic is specfically designed for mobile apps</h2>
         </section>
 
         <section>
