--- a/app/partials/ionic-basics.html
+++ b/app/partials/ionic-basics.html
@@ -283,7 +283,7 @@ $ionicActionSheet.show({
         center: true,
         width: 1100,
         maxScale: 2.0,
-        keyboard: false,
+        keyboard: true,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
         transition: Reveal.getQueryHash().transition || 'fade', // default/cube/page/concave/zoom/linear/fade/none
